# JOB_TRACKER

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  sonar-project.properties
.github/workflows/: ci.yml  sonarcloud.yaml
jobtracker/: db.py  enums.py  init_db.py  models.py  schemas.py
jobtracker/cli/: cli_cover_letter.py  cli_jobs.py  cli_resume.py  main.py
jobtracker/core/: job_actions.py
jobtracker/gui/: app.py
jobtracker/gui/cover_letters/: views.py
jobtracker/gui/jobs/: views.py
jobtracker/gui/notes/: views.py
jobtracker/gui/resumes/: views.py
src/jobtracker/cli/: cli_notes.py
tests/: conftest.py  test_cli_smoke.py  test_cli_transactions_and_flows.py  test_cover_letter_flows.py  test_enum_and_relationships.py  test_resume_flows.py  test_validation.py
