[tool.black]
line-length = 120
target-version = ["py310"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "C"]

[tool.ruff.lint.mccabe]
max-complexity = 10
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jobtracker"
version = "0.1.0"
description = "Simple CLI for tracking job applications"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = [
  "typer",
  "rich",
  "SQLAlchemy>=1.4",
  "pydantic",
]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["*.db", "jobtracker.db", "__pycache__"]

[project.urls]
"Homepage" = "https://github.com/cdickson72/JOB_TRACKER"

[project.scripts]
# Installable CLI entry point: `jobtracker` command -> runs Typer app
jobtracker = "jobtracker.cli.main:app"

[project.optional-dependencies]
# Extras for running tests
test = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
]

# Developer tooling (formatting/linting)
dev = [
  "ruff",
  "black",
  "pre-commit",
]
